--- a/out-product.html
+++ b/out-product.html
@@ -25,6 +25,34 @@
 </head>
 
 <body class="position-relative">
+  <!-- Modal Confirm Delete -->
+  <div class="modal-confirm " id="confirm-delete">
+		<div class="modal-confirm-body shadow rounded pb-4 position-relative">
+      <div class="confirm-header mb-4 bg-primary py-3 w-100 position-relative rounded-top">
+        <h1 class="text-white h2">Konfirmasi <span class="title-modal-confirm">hapus</span>!</h1>
+      </div>
+			<p class="message-modal-confirm text-lg mb-5">Tetap lakukan hapus data ini?</p>
+      <button class="btn-confirm-close btn btn-dark" data-close="confirm-delete">Batal</button>
+      <form class="d-inline-block">
+        <input type="hidden" name="id" class="id-data form-control" value=""> <!-- Otomatis get id -->
+        <button type="submit" class=" btn btn-danger">Hapus</button>
+      </form>
+		</div>
+  </div>
+
+
+  <!-- Modal Confirm Logout -->
+  <div class="modal-confirm " id="confirm-logout">
+		<div class="modal-confirm-body shadow rounded pb-4 position-relative">
+      <div class="confirm-header mb-4 bg-primary py-3 w-100 position-relative rounded-top">
+        <h1 class="text-white h2">Konfirmasi <span class="title-modal-confirm">logout</span>!</h1>
+      </div>
+			<p class="message-modal-confirm text-lg mb-5">Anda yakin untuk logout?</p>
+      <button class="btn-confirm-close btn btn-dark" data-close="confirm-logout">Batal</button>
+      <a href="login.html" class="text-white btn btn-danger">Logout</a>
+		</div>
+  </div>
+
   <!-- Sidenav -->
   <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
     <div class="scrollbar-inner">
@@ -125,7 +153,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Navbar links -->
           <h1 class="text-uppercase text-brand text-white" style="font-family: PT Mono;">Inventory-APP</h1>
-          <ul class="navbar-nav align-items-center  ml-auto ml-md-0 ">
+          <ul class="navbar-nav align-items-center  ml-auto ">
             <li class="nav-item dropdown">
               <a class="nav-link pr-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="media align-items-center">
@@ -133,7 +161,7 @@
                     <img alt="Image placeholder" src="assets/img/theme/team-4.jpg">
                   </span>
                   <div class="media-body  ml-2  d-none d-lg-block">
-                    <span class="mb-0 text-sm  font-weight-bold">John Snow</span>
+                    <span class="mb-0 text-sm  font-weight-bold">DUNIAPLIKASI</span>
                   </div>
                 </div>
               </a>
@@ -143,7 +171,7 @@
                   <span>My profile</span>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a href="#!" class="dropdown-item">
+                <a href="#" data-content="confirm-logout" data-kode="idUser" class="btn-confirm-modal dropdown-item">
                   <i class="ni ni-user-run"></i>
                   <span>Logout</span>
                 </a>
@@ -207,7 +235,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -220,7 +248,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -233,7 +261,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -246,7 +274,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -259,7 +287,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -272,7 +300,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -285,7 +313,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -298,7 +326,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
