--- a/product.html
+++ b/product.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="position-relative">
-  <!-- Modal Confirm -->
+  <!-- Modal Confirm Delete -->
   <div class="modal-confirm " id="confirm-delete">
 		<div class="modal-confirm-body shadow rounded pb-4 position-relative">
       <div class="confirm-header mb-4 bg-primary py-3 w-100 position-relative rounded-top">
@@ -40,6 +40,7 @@
 		</div>
   </div>
 
+  <!-- Modal Confirm Logout -->
   <div class="modal-confirm " id="confirm-logout">
 		<div class="modal-confirm-body shadow rounded pb-4 position-relative">
       <div class="confirm-header mb-4 bg-primary py-3 w-100 position-relative rounded-top">
@@ -47,10 +48,7 @@
       </div>
 			<p class="message-modal-confirm text-lg mb-5">Anda yakin untuk logout?</p>
       <button class="btn-confirm-close btn btn-dark" data-close="confirm-logout">Batal</button>
-      <form class="d-inline-block">
-        <input type="hidden" name="id" class="id-data form-control" value=""> <!-- Otomatis get id -->
-        <button type="submit" class=" btn btn-danger">Logout</button>
-      </form>
+      <a href="login.html" class="text-white btn btn-danger">Logout</a>
 		</div>
   </div>
 
@@ -164,7 +162,7 @@
                     <img alt="Image placeholder" src="assets/img/theme/team-4.jpg">
                   </span>
                   <div class="media-body  ml-2  d-none d-lg-block">
-                    <span class="mb-0 text-sm  font-weight-bold">John Snow</span>
+                    <span class="mb-0 text-sm  font-weight-bold">DUNIAPLIKASI</span>
                   </div>
                 </div>
               </a>
