--- a/unit.html
+++ b/unit.html
@@ -25,6 +25,33 @@
 </head>
 
 <body class="position-relative">
+  <!-- Modal Confirm Delete -->
+  <div class="modal-confirm " id="confirm-delete">
+		<div class="modal-confirm-body shadow rounded pb-4 position-relative">
+      <div class="confirm-header mb-4 bg-primary py-3 w-100 position-relative rounded-top">
+        <h1 class="text-white h2">Konfirmasi <span class="title-modal-confirm">hapus</span>!</h1>
+      </div>
+			<p class="message-modal-confirm text-lg mb-5">Tetap lakukan hapus data ini?</p>
+      <button class="btn-confirm-close btn btn-dark" data-close="confirm-delete">Batal</button>
+      <form class="d-inline-block">
+        <input type="hidden" name="id" class="id-data form-control" value=""> <!-- Otomatis get id -->
+        <button type="submit" class=" btn btn-danger">Hapus</button>
+      </form>
+		</div>
+  </div>
+
+  <!-- Modal Confirm Logout -->
+  <div class="modal-confirm " id="confirm-logout">
+		<div class="modal-confirm-body shadow rounded pb-4 position-relative">
+      <div class="confirm-header mb-4 bg-primary py-3 w-100 position-relative rounded-top">
+        <h1 class="text-white h2">Konfirmasi <span class="title-modal-confirm">logout</span>!</h1>
+      </div>
+			<p class="message-modal-confirm text-lg mb-5">Anda yakin untuk logout?</p>
+      <button class="btn-confirm-close btn btn-dark" data-close="confirm-logout">Batal</button>
+      <a href="login.html" class="text-white btn btn-danger">Logout</a>
+		</div>
+  </div>
+
   <!-- Sidenav -->
   <nav class="sidenav navbar navbar-vertical  fixed-left  navbar-expand-xs navbar-light bg-white" id="sidenav-main">
     <div class="scrollbar-inner">
@@ -132,7 +159,7 @@
                     <img alt="Image placeholder" src="assets/img/theme/team-4.jpg">
                   </span>
                   <div class="media-body  ml-2  d-none d-lg-block">
-                    <span class="mb-0 text-sm  font-weight-bold">John Snow</span>
+                    <span class="mb-0 text-sm  font-weight-bold">DUNIAPLIKASI</span>
                   </div>
                 </div>
               </a>
@@ -142,7 +169,7 @@
                   <span>My profile</span>
                 </a>
                 <div class="dropdown-divider"></div>
-                <a href="#!" class="dropdown-item">
+                <a href="#" data-content="confirm-logout" data-kode="idUser" class="btn-confirm-modal dropdown-item">
                   <i class="ni ni-user-run"></i>
                   <span>Logout</span>
                 </a>
@@ -204,7 +231,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -216,7 +243,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -228,7 +255,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -240,7 +267,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -252,7 +279,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -264,7 +291,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -276,7 +303,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -288,7 +315,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
@@ -300,7 +327,7 @@
                         <td class="text-center py-1">
                           <div class="btn-group">
                             <button id="btn-box" class="btn-edit bdg btn-outline-primary hover-success border-right-0"><i class="fas fa-pen-alt"></i></button>
-                            <button class="bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
+                            <button data-content="confirm-delete" data-kode="id1" class="btn-confirm-modal bdg btn-outline-primary hover-danger"><i class="fas fa-eraser"></i></button>
                           </div>
                         </td>
                     </tr>
